// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render properly with "/" separator 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  height: 100%;
  display: flex;
  align-items: center;
  text-decoration: none;
}

.c1 .c5 {
  user-select: none;
  color: #3872D2;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1:hover .c5 {
  color: #3061B3;
}

.c7 {
  height: 100%;
  display: flex;
  align-items: center;
  text-decoration: none;
  cursor: pointer;
}

.c7 .c5 {
  user-select: none;
  color: #3872D2;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c7:hover .c5 {
  color: #3061B3;
}

.c2>.c3 {
  margin-right: 0.4rem;
}

.c2>.c3 * {
  fill: #3872D2;
}

.c0 {
  height: 2.4rem;
  display: flex;
  align-items: center;
  padding: 0;
  margin: 0;
  list-style: none;
  flex-direction: row;
}

.c0>*:nth-child(even) {
  margin: 0 0.4rem;
}

.c0>.c3 * {
  fill: #3872D2;
}

<div>
  <ol
    class="c0"
  >
    <li
      class="c1 c2"
    >
      <svg
        class="c3 c4"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Back
      </span>
    </li>
    <span
      aria-hidden="true"
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      /
    </span>
    <li
      class="c1"
    >
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Covered Entities
      </span>
    </li>
    <span
      aria-hidden="true"
      class="c5 c6"
      textalign="initial"
      textcolor="inherit"
    >
      /
    </span>
    <li
      class="c7"
    >
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Add New Entities
      </span>
    </li>
  </ol>
</div>
`;

exports[`Breadcrumb component should render properly with {"$typeof": Symbol(react.element), "_owner": null, "_store": [Object], "key": "dummy", "props": [Object], "ref": null, "type": [Object]} separator 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c7 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  height: 100%;
  display: flex;
  align-items: center;
  text-decoration: none;
}

.c1 .c5 {
  user-select: none;
  color: #3872D2;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c1:hover .c5 {
  color: #3061B3;
}

.c8 {
  height: 100%;
  display: flex;
  align-items: center;
  text-decoration: none;
  cursor: pointer;
}

.c8 .c5 {
  user-select: none;
  color: #3872D2;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
}

.c8:hover .c5 {
  color: #3061B3;
}

.c2>.c3 {
  margin-right: 0.4rem;
}

.c2>.c3 * {
  fill: #3872D2;
}

.c0 {
  height: 2.4rem;
  display: flex;
  align-items: center;
  padding: 0;
  margin: 0;
  list-style: none;
  flex-direction: row;
}

.c0>*:nth-child(even) {
  margin: 0 0.4rem;
}

.c0>.c3 * {
  fill: #3872D2;
}

<div>
  <ol
    class="c0"
  >
    <li
      class="c1 c2"
    >
      <svg
        class="c3 c4"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Back
      </span>
    </li>
    <svg
      class="c3 c7"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <li
      class="c1"
    >
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Covered Entities
      </span>
    </li>
    <svg
      class="c3 c7"
      fill="none"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
        fill="#000"
        fill-opacity=".54"
      />
    </svg>
    <li
      class="c8"
    >
      <span
        class="c5 c6"
        textalign="initial"
        textcolor="inherit"
      >
        Add New Entities
      </span>
    </li>
  </ol>
</div>
`;
